--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Huawangl Private Website
+description: This is a demo website and used by private purposes.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
